--- a/map/src/index.html
+++ b/map/src/index.html
@@ -8,7 +8,9 @@
   <link type="text/css" rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <svg width="960" height="600"></svg>
+  <div id="map">
+    <svg width="960" height="600"></svg>
+  </div>
 </body>
 <script type="application/javascript" src="js/index.js"></script>
 </html>
