--- a/map/src/index.html
+++ b/map/src/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <div id="map">
+    <h1>Stafftronix Data Analytics</h1>
+    <h3>Call Frequency across Different States</h3>
     <svg width="960" height="600"></svg>
   </div>
 </body>
