Changed color and added legend

--- a/map/src/index.html
+++ b/map/src/index.html
@@ -14,6 +14,7 @@
     <div id="preloader">
       <object id="loading-animation" data="assets/loading.svg" type="image/svg+xml"></object>
   </div>
+    <svg id="legend" width="300" height="50"></svg>
     <svg id="graph" style="display:none" width="960" height="600"></svg>
   </div>
 </body>
